Add Additional Implementation to Question 39